# upside2-md

./: .gitattributes  .gitignore  docker_up.sh  dockerfile  install.sh  run_test.sh  source_x86  upside.sh
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.ipy  Dockerfile.lab  README.md  devcontainer.json  entrypoint.sh  environment.yml  post-create.sh  post-start.sh  sbatch_jupyter.sh  sbatch_runner.sh  upside2-ipy.def
doc/html/: _float4_8h.html  _float4_8h.js  _float4_8h__dep__incl.map  _float4_8h__dep__incl.md5  _float4_8h__incl.map  _float4_8h__incl.md5  _float4_8h_source.html  affine_8h.html  affine_8h.js  affine_8h__dep__incl.map  affine_8h__dep__incl.md5  affine_8h__incl.map  affine_8h__incl.md5  affine_8h_source.html  annotated.html  annotated_dup.js  backbone__steric_8cpp.html  backbone__steric_8cpp.js  backbone__steric_8cpp__incl.map  backbone__steric_8cpp__incl.md5  backbone__steric_8cpp_source.html  bead__interaction_8h.html  bead__interaction_8h.js  bead__interaction_8h__dep__incl.map  bead__interaction_8h__dep__incl.md5  bead__interaction_8h__incl.map  bead__interaction_8h__incl.md5  bead__interaction_8h_source.html  boxmuller_8hpp.html  boxmuller_8hpp.js  boxmuller_8hpp__dep__incl.map  boxmuller_8hpp__dep__incl.md5  boxmuller_8hpp__incl.map  boxmuller_8hpp__incl.md5  boxmuller_8hpp_source.html  classes.html  compute__rotamer__centers_8cpp.html  compute__rotamer__centers_8cpp.js  compute__rotamer__centers_8cpp__incl.map  compute__rotamer__centers_8cpp__incl.md5  (+1283 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+112 more)
doc/latex/: _float4_8h.tex  _float4_8h__dep__incl.md5  _float4_8h__incl.md5  _float4_8h_source.tex  affine_8h.tex  affine_8h__dep__incl.md5  affine_8h__incl.md5  affine_8h_source.tex  annotated.tex  backbone__steric_8cpp.tex  backbone__steric_8cpp__incl.md5  backbone__steric_8cpp_source.tex  bead__interaction_8h.tex  bead__interaction_8h__dep__incl.md5  bead__interaction_8h__incl.md5  bead__interaction_8h_source.tex  boxmuller_8hpp.tex  boxmuller_8hpp__dep__incl.md5  boxmuller_8hpp__incl.md5  boxmuller_8hpp_source.tex  compute__rotamer__centers_8cpp.tex  compute__rotamer__centers_8cpp__incl.md5  compute__rotamer__centers_8cpp_source.tex  compute__rotamer__pos_8cpp.tex  compute__rotamer__pos_8cpp__incl.md5  compute__rotamer__pos_8cpp_source.tex  coord__basic_8cpp.tex  coord__basic_8cpp__incl.md5  coord__basic_8cpp_source.tex  coord__const_8cpp.tex  coord__const_8cpp__incl.md5  coord__const_8cpp_source.tex  coord__map_8cpp.tex  coord__map_8cpp__incl.md5  coord__map_8cpp_source.tex  coord__operator_8cpp.tex  coord__operator_8cpp__incl.md5  coord__operator_8cpp_source.tex  deriv__engine_8cpp.tex  deriv__engine_8cpp__incl.md5  (+412 more)
example/01.GettingStarted/: 0.run.py
example/10.SelfAvoidRandomWalk/: run.py
py/: rotamer_parameter_estimation.py  run_upside.py
src/: CMakeLists.txt  CMakeLists_Other.txt  CMakeLists_arm.txt  Float4.h  backbone_steric.cpp  coord_basic.cpp  coord_basic.cu  coord_basic.h  coord_const.cpp  coord_map.cpp  coord_operator.cpp  deriv_engine.cpp  deriv_engine.h  device_buffer.cpp  device_buffer.cu  device_buffer.h  device_utils.cu  device_utils.h  eig.cpp  engine_c_library.cpp  environment.cpp  hbond.cpp  interaction_graph.cu  interaction_graph.h  main.cpp  membrane_potential.cpp  monte_carlo_sampler.cpp  placement.cpp  rama_map_pot.cpp  rotamer.cpp  sidechain_radial.cpp  sigmoid_energy.cpp  spring.cpp  surface.cpp  tension.cpp  vector_math.h
tests/: CMakeLists.txt  build.sh  test_runner.sh  testbridge.cpp
tests/records/: line_266_capture.json
tests/scripts/: gdb_cache_tracking.txt
tests/src/: nodes.cpp  test_utils.h
tests/utils/: README.md  batch_capture.sh  find_all_nodes.py  input_capture.py  regression.sh
tools/scripts/: auto_fixer.py
